--- a/bgx/dashboard/bjx/front/app.scss
+++ b/bgx/dashboard/bjx/front/app.scss
@@ -10,7 +10,7 @@
   padding: 20px;
   margin-bottom: 20px;
 }
-
+/*
 
 .node circle {
   cursor: pointer;
@@ -37,7 +37,7 @@ line.link {
   padding: 5px;
 }
 
-
+*/
 .link {
     fill: none;
     stroke: #666;
