change position by click

--- a/bgx/dashboard/bjx/front/app.scss
+++ b/bgx/dashboard/bjx/front/app.scss
@@ -31,6 +31,10 @@ line.link {
 }
 */
 
+#graph-container {
+  overflow: scroll;
+}
+
 .tooltip {
   background-color: white;
   border: 1px solid black;
