--- a/bgx/dashboard/bjx/front/app.scss
+++ b/bgx/dashboard/bjx/front/app.scss
@@ -44,7 +44,7 @@ line.link {
 */
 .graphLayer {
   #graph-container {
-    overflow: scroll;
+    //overflow: scroll;
 
     #graph {
       position: relative;
