--- a/bgx/dashboard/bjx/front/app.scss
+++ b/bgx/dashboard/bjx/front/app.scss
@@ -207,7 +207,10 @@ opacity: 0;
 
 
 .filters {
-  .list-group-item {
+  .list-inline {
+    margin-bottom: 0;
+  }
+  .list-inline-item {
     padding: 0.5rem 0.75rem;
     cursor: pointer;
 
@@ -215,4 +218,7 @@ opacity: 0;
     cursor: default;
   }
   }
+}
+.container {
+  padding-bottom: 40px;
 }
