ledger graph beta

--- a/bgx/dashboard/bjx/front/app.scss
+++ b/bgx/dashboard/bjx/front/app.scss
@@ -80,7 +80,7 @@ line.link {
 }
 .tooltip:after, .tooltip:before {
   top: 100%;
-  left: 20%;
+  left: 10px;
   border: solid transparent;
   content: " ";
   height: 0;
