--- a/bgx/dashboard/bjx/front/app.scss
+++ b/bgx/dashboard/bjx/front/app.scss
@@ -1,3 +1,17 @@
+// Copyright 2018 NTRlab
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+// -----------------------------------------------------------------------------
+
 @import "~bootstrap/scss/bootstrap";
 @import "~react-table/react-table.css";
 
@@ -22,29 +36,9 @@
 #accordion .card-header {
   padding: 0.25em;
 }
-/*
 
-.node circle {
-  cursor: pointer;
-  stroke: #3182bd;
-  stroke-width: 1.5px;
-}
-
-.node text {
-  font: 10px sans-serif;
-  pointer-events: none;
-  text-anchor: middle;
-}
-
-line.link {
-  fill: none;
-  stroke: #9ecae1;
-  stroke-width: 1.5px;
-}
-*/
 .graphLayer {
   #graph-container {
-    //overflow: scroll;
 
     #graph {
       position: relative;
