--- a/bgx/dashboard/bgx/front/app.scss
+++ b/bgx/dashboard/bgx/front/app.scss
@@ -29,6 +29,10 @@
   margin-top: 30px;
 }
 
+.margin-bottom {
+  margin-bottom: 30px;
+}
+
 .navbar-text {
   margin: 0 10px;
 }
@@ -228,8 +232,8 @@ opacity: 0;
 .card {
   .close-icon {
     position: absolute;
-    right: 20px;
-    top: 13px;
+    right: 10px;
+    top: 10px;
   }
 }
 
